# learn-rust-with-web-application

./: .gitignore  README.md
my-todo/: Cargo.toml  docker-compose.yml
my-todo/migrations/: 20230429134529_init.sql  20230430111953_label.sql
my-todo/src/: handlers.rs  main.rs  repositories.rs
my-todo/src/handlers/: label.rs  todo.rs
my-todo/src/repositories/: label.rs  todo.rs
todo-front/: package-lock.json  package.json
todo-front/src/: App.tsx
todo-front/src/components/: SideNav.tsx  TodoItem.tsx
todo-front/src/lib/: toggleLabels.ts
todo-front/src/lib/api/: label.ts
todo-front/src/styles/: modal.ts
todo-front/src/types/: todo.d.ts
