[package]
name = "my-todo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.56"
axum = "0.4.8"
dotenv = "0.15.0"
http-body = "0.4.3"
hyper = { version = "0.14.16", features = ["full"] }
mime = "0.3.16"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
sqlx = { version = "0.5.11", features = ["runtime-tokio-rustls", "any", "postgres"] }
thiserror = "1.0.30"
tokio = { version = "1.16.1", features = ["full"] }
tower = "0.4.11"
tower-http = { version = "0.2.5", features = ["cors"] }
tracing = "0.1.30"
tracing-subscriber = { version = "0.3.8", features = ["env-filter"] }
validator = { version = "0.14.0", features = ["derive"] }

[features]
default = ["database-test"]
database-test = []
